# nixpack_template

./: .gitignore  CHANGELOG.md  README.md  nixpacks.toml  pyproject.toml
.github/workflows/: test.yml
src/nixpack_template/: __init__.py  _version.py
tests/: coverage.conf  test_server.py
