[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "nixpack_template"
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
description = ""
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.35.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/johncloud-paas/stacks/nixpack_template/-/issues"
Homepage = "https://github.com/johncloud-paas/stacks/nixpack_template"
Source = "https://github.com/johncloud-paas/stacks/nixpack_template"

[tool.pylint.format]
max-line-length = 100

[tool.pdm.version]
fallback_version = "1.0.0"
source = "scm"
version_scheme = "guess-next-dev"
local_scheme = "node-and-hash"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.uv]
resolution = "highest"

[dependency-groups]
dev = [
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3>=0.11.3",
    "pylint>=3.3.2",
]
test = [
    "pyyaml>=6.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov=nixpack_template",
    "--doctest-modules",
]
testpaths = [
    "tests/",
]
